[package]
name = "web-console-logger"
version = "0.1.0"
authors = ["Scott J Maddox"]
license = "MIT/Apache-2.0"
description = "A logger for the wasm32-unknown-unknown target that prints all messages to the web console"


[dependencies]
log = "0.4"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
